--- a/arch/arm/configs/extended_defconfig
+++ b/arch/arm/configs/extended_defconfig
@@ -33,7 +33,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-lineage"
+CONFIG_LOCALVERSION="-Extended-Kernel-LOS/AOSP"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -543,10 +543,10 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-CONFIG_CPU_FREQ_GOV_USERSPACE=y
+# CONFIG_CPU_FREQ_GOV_USERSPACE is not set
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+# CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 # CONFIG_CPUFREQ_DT is not set
 # CONFIG_CPU_BOOST is not set
 
@@ -618,7 +618,7 @@ CONFIG_DPM_WATCHDOG_TIMEOUT=60
 # CONFIG_APM_EMULATION is not set
 CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
-# CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_PM=y
 CONFIG_SUSPEND_TIME=y
 CONFIG_SUSPEND_TIME_TIMEKEEPING=y
@@ -684,9 +684,13 @@ CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
 # CONFIG_INET_UDP_DIAG is not set
 CONFIG_INET_DIAG_DESTROY=y
-# CONFIG_TCP_CONG_ADVANCED is not set
+CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_CUBIC=y
-CONFIG_DEFAULT_TCP_CONG="cubic"
+CONFIG_TCP_CONG_HTCP=y
+CONFIG_TCP_CONG_WESTWOOD=y
+# CONFIG_TCP_CONG_BIC is not set
+CONFIG_DEFAULT_WESTWOOD=y
+CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
 CONFIG_IPV6_ROUTER_PREF=y
@@ -1670,7 +1674,7 @@ CONFIG_INPUT_MOUSEDEV_SCREEN_X=1024
 CONFIG_INPUT_MOUSEDEV_SCREEN_Y=768
 # CONFIG_INPUT_JOYDEV is not set
 CONFIG_INPUT_EVDEV=y
-CONFIG_INPUT_EVBUG=m
+# CONFIG_INPUT_EVBUG is not set
 CONFIG_INPUT_KEYRESET=y
 CONFIG_INPUT_KEYCOMBO=y
 CONFIG_HOMEBUTTON=y
@@ -2430,7 +2434,7 @@ CONFIG_MFD_CORE=y
 # CONFIG_MFD_WM8994 is not set
 # CONFIG_WCD9306_CODEC is not set
 # CONFIG_WCD9320_CODEC is not set
-# CONFIG_WCD9330_CODEC is not set
+CONFIG_WCD9330_CODEC=y
 CONFIG_WCD9335_CODEC=y
 CONFIG_REGULATOR=y
 # CONFIG_REGULATOR_DEBUG is not set
@@ -3296,7 +3300,7 @@ CONFIG_USB_GADGET_STORAGE_NUM_BUFFERS=2
 # CONFIG_USB_GADGET_XILINX is not set
 CONFIG_USB_CI13XXX_MSM=y
 # CONFIG_USB_CI13XXX_MSM_HSIC is not set
-CONFIG_USB_DUMMY_HCD=m
+# CONFIG_USB_DUMMY_HCD is not set
 CONFIG_USB_LIBCOMPOSITE=y
 CONFIG_USB_F_ACM=y
 CONFIG_USB_U_SERIAL=y
@@ -3343,7 +3347,7 @@ CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_MMC_BLOCK_DEFERRED_RESUME is not set
 # CONFIG_SDIO_UART is not set
-CONFIG_MMC_TEST=m
+# CONFIG_MMC_TEST is not set
 CONFIG_MMC_FFU=y
 
 #
